# l2mapper-linux

./: BUILD_LINUX.md  CMakeLists.txt  Readme.md
.github/: FUNDING.yml
src/: L2Geodata.cpp  L2TextureManager.cpp  L2Window.cpp  L2Window.h  OpenGLImageLoader_FreeImage.h  _afx.h  config.cpp  config.h  main.cpp  main.h
src/GUI/: L2UIBusyScreen.cpp  L2UIBusyScreen.h  L2UIEditor.cpp  L2UIEditor.h  L2UIMain.cpp  L2UIMain.h  L2UIMap.cpp  L2UIMap.h
src/L2Lib/: L2LibVarsHolder.cpp  L2LibVarsHolder.h  Platform.h  Platform_Linux.cpp  Platform_Linux.h  UBase.h  ULevel.cpp  ULevel.h  UMath.h  UModel.cpp  UPackage.cpp  UPackage.h  UPackageManager.cpp  UStaticMeshActor.cpp  UTerrain.cpp  _shader.cpp  _shader.h  jArray.h  l2math.cpp  utils.cpp
src/core/: L2InputManager.cpp  L2InputManager.h  L2Time.cpp  L2Time.h
src/scene/: L2Camera.cpp  L2LevelManager.cpp  L2LevelManager.h  L2Scene.cpp
